# talkflow

./: .gitattributes  .gitignore  INSTRUCTIONS.md  README.md  config.example.toml  pyproject.toml  setup.ps1  setup.sh  whisprlocal-autostart.plist  whisprlocal-autostart.vbs  whisprlocal.desktop
whisprlocal/: __init__.py  app.py  clean.py  config.py  injector.py  llm_clean.py  logutil.py  transcriber.py
whisprlocal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
whisprlocal/.claude/: settings.local.json
